@@ -7,6 +7,7 @@ version 0.8 - xxx
  . Particles: Added QuadParticleSystem. renamed ParticleSystem to PointParticleSystem (issue #245)
  . Particles: added support for endSize and endSizeVar (issue #241)
  . Particles: added support for start/end/var spinning (issue #335)
+ . Particles: support for World/Local coordinates (issue #241)
  . Touches: new feature (issue #211)
 
 version 0.7.2 - 23-Apr-2009
